--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,28 +7,37 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependencies
+node_modules/
+
+# Build artifacts
+dist/
+dist-ssr/
+out/
+build/
+coverage/
+
+# Local environment variables
+.env
+.env.local
+.env.*.local
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-!node_modules/.vite
+# OS generated files
+.DS_Store
+Thumbs.db
 
+# Project-specific temporary/generated files
+*.local
 **/tempobook/dynamic/
 **/tempobook/storyboards/
-
-core
-
-.github/
-
+core/
